[gd_scene load_steps=4 format=3 uid="uid://dna84xunvpmop"]

[ext_resource type="Script" path="res://scripts/movingObject.gd" id="1_qqvn7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rrbh"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_817mj"]
size = Vector2(16, 18)

[node name="testEnemy" type="Node2D"]
position = Vector2(-105, -16)
script = ExtResource("1_qqvn7")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_1rrbh")

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0.352941, 0.411765, 1)

[node name="wallCast" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(16, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="feet" type="Area2D" parent="CharacterBody2D" groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/feet"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_817mj")

[connection signal="area_entered" from="CharacterBody2D/feet" to="." method="onGround"]
[connection signal="area_exited" from="CharacterBody2D/feet" to="." method="offGround"]
